--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SMS Enterprise — Folleto Comercial</title>
 
   <!-- Favicon y metadatos sociales (dentro del HEAD) -->
-  <link rel="icon" href="./logo_sms_enterprise.png">
+  <link rel="icon" href="./logo_sms_enterprise_pag.png">
   <meta property="og:title" content="SMS Enterprise — Anticipá el riesgo cambiario">
   <meta property="og:description" content="Modelo cuantitativo que estima la probabilidad de tensiones cambiarias a 6 meses.">
   <meta property="og:type" content="website">
@@ -26,7 +26,6 @@
     /* HEADER corporativo */
     header{display:flex;align-items:center;gap:14px;margin-bottom:12px}
     .logo-chip{
-      background:#7f8cb3; border:2px solid #3b4563; border-radius:20px;
       padding:18px; display:flex; align-items:center; justify-content:center;
     }
     .logo-chip img{height:80px;width:auto;display:block;filter:none}
