--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="SMS Enterprise — Anticipá el riesgo cambiario">
   <meta property="og:description" content="Modelo cuantitativo que estima la probabilidad de tensiones cambiarias a 6 meses.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="./logo_sms_enterprise.png">
+  <meta property="og:image" content="./logo_sms_enterprise_pag.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
