--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <header>
       <div class="logo-chip">
         <!-- Asegurate de subir este archivo al repo -->
-        <img src="./logo_sms_enterprise.png" alt="SMS Enterprise">
+        <img src="./logo_sms_enterprise_pag.png" alt="SMS Enterprise">
       </div>
       <div class="brand-title">SMS Enterprise</div>
     </header>
