--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="price">USD 2.500 <small>/ mes</small></div>
           <ul>
             <li><b>Frecuencia:</b> semanal</li>
-            <li><b>Incluye:</b> calibración personalizada (falsos positivos, persistencia), funciones de costo</li>
+            <li><b>Incluye:</b> Pro + calibración personalizada (falsos positivos, sensibilidad y más), funciones de costo</li>
             <li><b>Soporte:</b> soporte directo y reuniones mensuales breves</li>
           </ul>
         </div>
@@ -174,7 +174,7 @@
           <div class="price">USD 1.000 <small>/ mes</small></div>
           <ul>
             <li><b>Frecuencia:</b> quincenal</li>
-            <li><b>Incluye:</b> explicación de alarmas (por qué se activan) y drivers macro</li>
+            <li><b>Incluye:</b>  Lite + perfil de riesgo, explicación de alarmas y drivers macro</li>
             <li><b>Entrega:</b> informe ejecutivo con lectura económica y alerta corta entre reportes</li>
           </ul>
         </div>
