--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <ul>
             <li><b>Frecuencia:</b> mensual</li>
             <li><b>Incluye:</b> probabilidad de crisis, alarmas activas, métricas básicas</li>
-            <li><b>Entrega:</b> reporte en Excel con semáforo y glosario</li>
+            <li><b>Entrega:</b> reporte en Excel con semáforo de alertas</li>
           </ul>
           <div class="trial">Prueba de 60 días (Lite), sin compromiso</div>
         </div>
@@ -157,8 +157,8 @@
           <div class="price">USD 2.500 <small>/ mes</small></div>
           <ul>
             <li><b>Frecuencia:</b> semanal</li>
-            <li><b>Incluye:</b> Pro + calibración personalizada (falsos positivos, sensibilidad y más), funciones de costo</li>
-            <li><b>Soporte:</b> soporte directo y reuniones mensuales breves</li>
+            <li><b>Incluye:</b> Pro + calibración personalizada (falsos positivos, sensibilidad, funciones de costo y más)</li>
+            <li><b>Soporte:</b> soporte directo, informe de situación y reunión mensual breve</li>
           </ul>
         </div>
         <div class="cta-bottom">
@@ -171,11 +171,11 @@
         <div class="card-inner">
           <h3>Pro</h3>
           <div class="micro">Diseñado para equipos económicos y mesas de dinero</div>
-          <div class="price">USD 1.000 <small>/ mes</small></div>
+          <div class="price">USD 1.100 <small>/ mes</small></div>
           <ul>
             <li><b>Frecuencia:</b> quincenal</li>
             <li><b>Incluye:</b>  Lite + perfil de riesgo, explicación de alarmas y drivers macro</li>
-            <li><b>Entrega:</b> informe ejecutivo con lectura económica y alerta corta entre reportes</li>
+            <li><b>Entrega:</b> reporte en Excel con análisis de alertas y métricas avanzadas</li>
           </ul>
         </div>
         <div class="cta-bottom">
