--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- JSON-LD: Organización + Sitio + Producto/Ofertas -->
   <script type="application/ld+json">{
-    "@context":"https://schema.org","@type":"Organization","name":"SMS ENTERPRISE","url":"https://santiagowickham.github.io/","logo":"https://santiagowickham.github.io/logo_sms_enterprise_claro.png","contactPoint":[{"@type":"ContactPoint","contactType":"sales","email":"santiagowickham@gmail.com"}]}
+    "@context":"https://schema.org","@type":"Organization","name":"SMS ENTERPRISE","url":"https://santiagowickham.github.io/","logo":"https://santiagowickham.github.io/logo_sms_enterprise_claro.png","contactPoint":[{"@type":"ContactPoint","contactType":"sales","email":"SMSENTERPRISEDEV@gmail.com"}]}
   </script>
   <script type="application/ld+json">{
     "@context":"https://schema.org","@type":"WebSite","name":"SMS ENTERPRISE","url":"https://santiagowickham.github.io/"}
@@ -44,7 +44,7 @@
     .wrap{max-width:1180px;margin:0 auto;padding:0 18px}
 
     /* NAVBAR sticky */
-    .navbar{position:sticky;top:0;z-index:50;background:rgba(15,23,42,.8);backdrop-filter:blur(10px);border-bottom:1px solid rgba(255,255,255,.06)}
+    .navbar{position:sticky;top:0;z-index:50;background:rgba(15,23,42,.85);backdrop-filter:blur(10px);border-bottom:1px solid rgba(255,255,255,.06)}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:16px;padding:10px 0}
     .nav-left{display:flex;align-items:center;gap:10px}
     .nav-left img{height:34px;width:auto}
@@ -52,7 +52,7 @@
     .nav-cta{display:flex;gap:10px}
     .btn{display:inline-block;padding:10px 14px;border-radius:12px;font-weight:650;text-decoration:none;border:1px solid transparent;line-height:1}
     .btn-primary{background:linear-gradient(180deg,var(--brand),var(--brand-2));color:#fff}
-    .btn-ghost{border:1px solid var(--card-border);color:#cbd5e1}
+    .btn-ghost{border:1px solid var(--card-border);color:#e5e7eb}
     .btn-primary:hover,.btn-ghost:hover{filter:brightness(1.06)}
     .btn:active{transform:translateY(1px)}
     @media(min-width:880px){.nav-links{display:flex}}
@@ -68,9 +68,9 @@
 
     /* KPI strip */
     .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin:16px 0}
-    .kpi{background:#0b1226;border:1px solid var(--card-border);border-radius:12px;padding:12px}
-    .kpi b{display:block;font-size:14px;color:#cbd5e1}
-    .kpi span{font-size:18px;font-weight:800}
+    .kpi{background:linear-gradient(180deg,#121c36,#0b1226);border:1px solid #2a3a63;border-radius:12px;padding:12px}
+    .kpi b{display:block;font-size:13px;color:#b7c2d8;letter-spacing:.2px}
+    .kpi span{font-size:18px;font-weight:800;color:#ffffff;text-shadow:0 0 1px rgba(0,0,0,.25)}
     @media(max-width:880px){.kpis{grid-template-columns:repeat(2,1fr)}}
 
     /* Secciones */
@@ -83,7 +83,6 @@
     .step{background:var(--card);border:1px solid var(--card-border);border-radius:16px;padding:18px}
     .step h3{margin:0 0 6px;font-size:18px}
     @media(max-width:980px){.steps{grid-template-columns:1fr}}
-    .diagram{margin-top:12px;border:1px dashed var(--card-border);border-radius:12px;padding:10px;display:flex;justify-content:center}
 
     /* Planes */
     .grid{display:grid;gap:18px}
@@ -131,9 +130,6 @@
 
     /* Footer */
     .footer{margin:28px 0 40px;border-top:1px solid var(--card-border);padding-top:16px;text-align:center;color:#cbd5e1;font-size:14px}
-
-    /* Tema claro opcional según preferencia del usuario */
-   @media (prefers-color-scheme: light){:root{--bg:#ffffff;--text:#0b1226;--muted:#475569;--card:#ffffff;--card-border:#e5e7eb} .faq-btn{background:#eef2ff;color:#0b1226} .faq-panel{background:#fff}}
   </style>
 </head>
 <body>
@@ -152,8 +148,8 @@
         <a href="#contacto">Contacto</a>
       </div>
       <div class="nav-cta">
-        <a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
-        <a class="btn btn-primary" href="mailto:santiagowickham@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a>
+        <a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
+        <a class="btn btn-primary" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a>
       </div>
     </div>
   </nav>
@@ -170,41 +166,32 @@
         <div class="kpi"><b>Último release</b><span>2024-12-31</span></div>
       </div>
       <div style="display:flex;gap:10px;flex-wrap:wrap" role="group" aria-label="Acciones principales">
-        <a class="btn btn-primary" href="mailto:santiagowickham@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
-        <a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a>
+        <a class="btn btn-primary" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
+        <a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a>
       </div>
     </div>
     <div class="hero-visual" aria-label="Diagrama del flujo del modelo">
-      <!-- Mini-diagrama SVG corporativo -->
-      <svg width="420" height="220" viewBox="0 0 420 220" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Señales → Probabilidad calibrada → Bandas/Alertas">
+      <!-- Mini-diagrama SVG corporativo (sin detalles técnicos) -->
+      <svg width="420" height="220" viewBox="0 0 420 220" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Datos → Probabilidad → Alertas">
         <defs>
           <linearGradient id="g1" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="#60a5fa"/><stop offset="100%" stop-color="#2563eb"/></linearGradient>
         </defs>
         <rect x="10" y="20" rx="12" ry="12" width="120" height="60" fill="#0b1226" stroke="#1f2a44"/>
-        <text x="70" y="55" text-anchor="middle" fill="#e5e7eb" font-size="12">Señales</text>
+        <text x="70" y="55" text-anchor="middle" fill="#e5e7eb" font-size="12">Datos</text>
 
         <rect x="160" y="20" rx="12" ry="12" width="120" height="60" fill="#0b1226" stroke="#1f2a44"/>
-        <text x="220" y="45" text-anchor="middle" fill="#e5e7eb" font-size="12">Probabilidad</text>
-        <text x="220" y="60" text-anchor="middle" fill="#a8b3c7" font-size="10">(calibrada)</text>
+        <text x="220" y="50" text-anchor="middle" fill="#e5e7eb" font-size="12">Probabilidad</text>
 
         <rect x="310" y="20" rx="12" ry="12" width="100" height="60" fill="#0b1226" stroke="#1f2a44"/>
-        <text x="360" y="45" text-anchor="middle" fill="#e5e7eb" font-size="12">Bandas</text>
-        <text x="360" y="60" text-anchor="middle" fill="#a8b3c7" font-size="10">& Alertas</text>
+        <text x="360" y="50" text-anchor="middle" fill="#e5e7eb" font-size="12">Alertas</text>
 
         <line x1="130" y1="50" x2="160" y2="50" stroke="url(#g1)" stroke-width="3"/>
         <line x1="280" y1="50" x2="310" y2="50" stroke="url(#g1)" stroke-width="3"/>
 
-        <!-- Iconitos -->
-        <circle cx="40" cy="110" r="10" fill="#2563eb"/>
-        <circle cx="70" cy="110" r="10" fill="#38bdf8"/>
-        <circle cx="100" cy="110" r="10" fill="#60a5fa"/>
-        <text x="70" y="135" text-anchor="middle" fill="#a8b3c7" font-size="10">NIV · SLOPE · PERS · GAP · BRK</text>
-
-        <rect x="160" y="95" rx="10" ry="10" width="120" height="36" fill="#13203f" stroke="#1f2a44"/>
-        <text x="220" y="117" text-anchor="middle" fill="#cbd5e1" font-size="11">NOISY‑OR + Isotónica</text>
-
-        <rect x="310" y="95" rx="10" ry="10" width="100" height="36" fill="#13203f" stroke="#1f2a44"/>
-        <text x="360" y="117" text-anchor="middle" fill="#cbd5e1" font-size="11">Watch/Warning/Action</text>
+        <!-- Iconos genéricos -->
+        <circle cx="70" cy="120" r="12" fill="#2563eb"/>
+        <rect x="206" y="108" width="28" height="24" rx="6" fill="#38bdf8"/>
+        <polygon points="350,114 370,126 350,138" fill="#60a5fa"/>
       </svg>
     </div>
   </header>
@@ -214,11 +201,11 @@
     <section id="como" aria-labelledby="como-title">
       <h2 id="como-title">Cómo funciona</h2>
       <div class="steps">
-        <div class="step"><h3>1) Calibra modelo</h3><p>Ajuste honesto con freeze DEV/HOLDOUT, validación temporal y calibración isotónica. Configurable por perfil.</p></div>
-        <div class="step"><h3>2) Analiza señales</h3><p>Doce series macro-financieras descompuestas en NIV, SLOPE, PERS, GAP y BRK; fusión probabilística NOISY‑OR.</p></div>
-        <div class="step"><h3>3) Bandas y alertas</h3><p>Umbrales robustos, persistencia y perfiles (Lite/Pro/Premium) con reporte claro y accionable.</p></div>
+        <div class="step"><h3>1) Calibra modelo</h3><p>Ajuste honesto con freeze DEV/HOLDOUT y validación temporal. Calibración acorde al perfil.</p></div>
+        <div class="step"><h3>2) Analiza señales</h3><p>Interpretación macro-financiera para sintetizar en una probabilidad única.</p></div>
+        <div class="step"><h3>3) Bandas y alertas</h3><p>Umbrales robustos y persistencia para Watch / Warning / Action.</p></div>
       </div>
-      <div class="diagram" aria-hidden="true"><small>Diagrama simplificado del pipeline (arriba).</small></div>
+      <!-- Aviso retirado: sin barra redundante -->
     </section>
 
     <!-- Planes -->
@@ -238,7 +225,7 @@
               <li><b>Prueba:</b> incluye prueba Lite de 60 días (registro requerido)</li>
             </ul>
           </div>
-          <div class="cta-bottom"><a class="btn btn-primary" href="mailto:santiagowickham@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a></div>
+          <div class="cta-bottom"><a class="btn btn-primary" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a></div>
         </article>
 
         <article class="card premium" role="listitem" aria-labelledby="plan-premium">
@@ -254,7 +241,7 @@
               <li><b>Prueba:</b> acceso a prueba Lite de 60 días</li>
             </ul>
           </div>
-          <div class="cta-bottom"><a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a></div>
+          <div class="cta-bottom"><a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a></div>
         </article>
 
         <article class="card" role="listitem" aria-labelledby="plan-pro">
@@ -269,7 +256,7 @@
               <li><b>Prueba:</b> acceso a prueba Lite de 60 días</li>
             </ul>
           </div>
-          <div class="cta-bottom"><a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Consulta%20Plan%20Pro">Quiero hablar del plan Pro</a></div>
+          <div class="cta-bottom"><a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Consulta%20Plan%20Pro">Quiero hablar del plan Pro</a></div>
         </article>
       </div>
 
@@ -344,8 +331,7 @@
         </div>
         <div class="faq-item">
           <button class="faq-btn" aria-expanded="false" aria-controls="p7" id="q7">¿Política de soporte / tiempos de respuesta?<span>+</span></button>
-          <div class="faq-panel" id="p7" role="region" aria-labelledby="q7"><p>Lite/Pro vía correo en horario hábil; Premium con soporte directo y reunión mensual.
-          </p></div>
+          <div class="faq-panel" id="p7" role="region" aria-labelledby="q7"><p>Lite/Pro vía correo en horario hábil; Premium con soporte directo y reunión mensual.</p></div>
         </div>
       </div>
     </section>
@@ -354,16 +340,16 @@
     <section id="contacto" aria-labelledby="contacto-title">
       <h2 id="contacto-title">Contacto</h2>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn btn-primary" href="mailto:santiagowickham@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
-        <a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a>
-        <a class="btn btn-ghost" href="mailto:santiagowickham@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a>
+        <a class="btn btn-primary" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Demo%20SMS%20Enterprise">Agendá una demo</a>
+        <a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Propuesta%20Plan%20Premium">Solicitar propuesta Premium</a>
+        <a class="btn btn-ghost" href="mailto:SMSENTERPRISEDEV@gmail.com?subject=Prueba%2060%20d%C3%ADas%20Lite">Prueba 60 días</a>
       </div>
     </section>
 
     <!-- Políticas (anclas) -->
     <section id="privacidad" aria-labelledby="priv-title">
       <h2 id="priv-title">Política de Privacidad</h2>
-      <p>Recopilamos únicamente la información de contacto que nos enviás voluntariamente por correo. No compartimos tus datos con terceros. Podés solicitar acceso o eliminación escribiendo a <a href="mailto:santiagowickham@gmail.com">santiagowickham@gmail.com</a>.</p>
+      <p>Recopilamos únicamente la información de contacto que nos enviás voluntariamente por correo. No compartimos tus datos con terceros. Podés solicitar acceso o eliminación escribiendo a <a href="mailto:SMSENTERPRISEDEV@gmail.com">SMSENTERPRISEDEV@gmail.com</a>.</p>
     </section>
     <section id="terminos" aria-labelledby="term-title">
       <h2 id="term-title">Términos de Servicio</h2>
@@ -386,7 +372,7 @@
   </div>
 
   <footer class="wrap footer" role="contentinfo">
-    © 2025 — SMS ENTERPRISE · Argentina · <a href="mailto:santiagowickham@gmail.com">santiagowickham@gmail.com</a> ·
+    © 2025 — SMS ENTERPRISE · Argentina · <a href="mailto:SMSENTERPRISEDEV@gmail.com">SMSENTERPRISEDEV@gmail.com</a> ·
     <a href="#privacidad">Privacidad</a> · <a href="#terminos">Términos</a>
   </footer>
 
@@ -417,18 +403,48 @@
     lb.addEventListener('click',e=>{if(e.target===lb){closeLb.click();}});
     document.addEventListener('keydown',e=>{if(e.key==='Escape'&&lb.classList.contains('open')) closeLb.click();});
 
-    // Cookie banner + GA (placeholder ID)
+    // Cookie banner + Consent-managed Tagging (GTM/GA)
     const COOKIE_KEY='sms_cookie_ok';
+    const GTM_ID='GTM-PDC9CHSM';      // ▶︎ tu contenedor de Google Tag Manager
+    const GA_ID='';                   // opcional: si querés cargar GA4 directo (ej: 'G-XXXXXXX')
+
     const cookie=document.getElementById('cookie');
-    const showCookie=()=>{if(!localStorage.getItem(COOKIE_KEY)) cookie.style.display='flex'};
-    const acceptCookie=()=>{localStorage.setItem(COOKIE_KEY,'1');cookie.style.display='none';
-      // Inicializar GA solo tras consentimiento
-      const GA_ID='G-XXXXXXX'; // TODO: reemplazar por tu ID GA4
-      if(GA_ID&&GA_ID!=='G-XXXXXXX'){
-        const s=document.createElement('script');s.async=true;s.src=`https://www.googletagmanager.com/gtag/js?id=${GA_ID}`;document.head.appendChild(s);
-        window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}window.gtag=gtag;gtag('js', new Date());gtag('config', GA_ID);
-      }
+    const showCookie=()=>{ if(!localStorage.getItem(COOKIE_KEY)) cookie.style.display='flex'; else initTags(); };
+
+    function loadGTM(id){
+      // dataLayer
+      window.dataLayer=window.dataLayer||[];
+      window.dataLayer.push({ 'consentGranted': true, 'event': 'gtm.consentGranted' });
+      // script
+      const f=document.getElementsByTagName('script')[0];
+      const j=document.createElement('script');
+      j.async=true; j.src='https://www.googletagmanager.com/gtm.js?id='+id; f.parentNode.insertBefore(j,f);
+      // noscript (para navegadores sin JS o bloqueos)
+      const ns=document.createElement('iframe');
+      ns.src='https://www.googletagmanager.com/ns.html?id='+id;
+      ns.height='0'; ns.width='0'; ns.style.display='none'; ns.style.visibility='hidden';
+      document.body.appendChild(ns);
+    }
+
+    function loadGA(id){
+      const s=document.createElement('script'); s.async=true; s.src=`https://www.googletagmanager.com/gtag/js?id=${id}`; document.head.appendChild(s);
+      window.dataLayer=window.dataLayer||[]; function gtag(){dataLayer.push(arguments);} window.gtag=gtag;
+      gtag('js', new Date()); gtag('config', id);
+    }
+
+    function initTags(){
+      // Evitar dobles cargas
+      if(window.__tagsLoaded) return; window.__tagsLoaded=true;
+      if(GTM_ID){ loadGTM(GTM_ID); }
+      else if(GA_ID){ loadGA(GA_ID); }
+    }
+
+    const acceptCookie=()=>{
+      localStorage.setItem(COOKIE_KEY,'1');
+      cookie.style.display='none';
+      initTags();
     };
+
     document.getElementById('cookieAccept').addEventListener('click',acceptCookie);
     showCookie();
   </script>
