--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       --card:#0b1226; --card-border:#1f2a44; --shadow:0 10px 30px rgba(0,0,0,.35);
       --radius:18px;
     }
+    /* Respeto preferencias: si el usuario pide menos movimiento, apago todo */
     @media (prefers-reduced-motion: reduce) { *{animation:none!important;transition:none!important} }
+
     html,body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,Segoe UI,Roboto,Arial,sans-serif}
     a{color:#93c5fd}
     .wrap{max-width:1180px;margin:0 auto;padding:0 18px}
@@ -64,31 +66,59 @@
     .gradient{background:linear-gradient(92deg,#93c5fd,#60a5fa);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent}
     .subtitle{font-size:clamp(16px,2.4vw,20px);color:#cbd5e1;margin:0 0 10px}
     .lead{color:#a8b3c7;max-width:70ch}
+
+    /* HERO VISUAL con animación */
     .hero-visual{
       position:relative;background:var(--card);border:1px solid var(--card-border);
-      border-radius:16px;min-height:248px;display:flex;align-items:center;justify-content:center;overflow:hidden
+      border-radius:16px;min-height:260px;display:flex;align-items:center;justify-content:center;overflow:hidden
     }
-    .hero-visual::before{ /* textura sutil para que no se vea vacío */
+    /* textura + barrido dinámico */
+    .hero-visual::before{
       content:"";position:absolute;inset:0;background:
-        radial-gradient(1000px 300px at 20% -10%, rgba(37,99,235,.15), transparent 60%),
-        radial-gradient(800px 300px at 120% 120%, rgba(56,189,248,.12), transparent 60%),
-        repeating-linear-gradient(90deg, rgba(255,255,255,.04) 0 1px, transparent 1px 40px);
+        radial-gradient(1000px 300px at 20% -10%, rgba(37,99,235,.18), transparent 60%),
+        radial-gradient(800px 300px at 120% 120%, rgba(56,189,248,.14), transparent 60%),
+        repeating-linear-gradient(90deg, rgba(255,255,255,.035) 0 1px, transparent 1px 42px);
       pointer-events:none
     }
-
-    /* Pipeline pills (reemplaza SVG) */
-    .pipeline{position:relative;display:flex;gap:18px;align-items:center;padding:18px}
-    .pill{
-      padding:14px 16px;border:1px solid var(--card-border);background:rgba(13,22,44,.8);
-      border-radius:14px;min-width:130px;text-align:center;box-shadow:inset 0 0 0 1px rgba(255,255,255,.02)
+    .hero-visual::after{
+      content:"";position:absolute;inset:-40% 0 0 0;background:linear-gradient(90deg, rgba(96,165,250,.12), rgba(59,130,246,.0));
+      filter:blur(30px);transform:translateX(-100%);animation:bg-sweep 6s linear infinite;
+      pointer-events:none
     }
-    .pill b{display:block;font-size:14px;letter-spacing:.2px;color:#dbe5ff}
-    .pill small{display:block;color:#9fb3d9;font-size:11px;margin-top:4px}
-    .arrow{width:0;height:0;border-top:10px solid transparent;border-bottom:10px solid transparent;border-left:14px solid #4285f4;opacity:.9}
-    .ico{display:inline-flex;align-items:center;justify-content:center;width:26px;height:26px;border-radius:999px;margin-bottom:8px}
+    @keyframes bg-sweep { to{ transform:translateX(120%)} }
+
+    .pipeline{position:relative;display:flex;gap:18px;align-items:center;padding:22px 18px}
+    .pill{
+      padding:16px 18px;border:1px solid var(--card-border);background:rgba(13,22,44,.85);
+      border-radius:16px;min-width:150px;text-align:center;box-shadow:inset 0 0 0 1px rgba(255,255,255,.02);
+      animation:pillGlow 6s ease-in-out infinite;
+    }
+    /* brillo secuencial por step */
+    .pill.step-1{animation-delay:0s}
+    .pill.step-2{animation-delay:1.2s}
+    .pill.step-3{animation-delay:2.4s}
+    @keyframes pillGlow{
+      0%,70%,100%{box-shadow:inset 0 0 0 1px rgba(255,255,255,.02), 0 0 0 rgba(56,189,248,0)}
+      10%,20%{box-shadow:0 0 0 0 rgba(56,189,248,.45), 0 0 24px 8px rgba(56,189,248,.16)}
+    }
+    .pill b{display:block;font-size:15px;letter-spacing:.2px;color:#e8efff}
+    .pill small{display:block;color:#9fb3d9;font-size:12px;margin-top:5px}
+    .ico{display:inline-flex;align-items:center;justify-content:center;width:28px;height:28px;border-radius:999px;margin-bottom:8px}
     .ico.d{background:#1d4ed8}
     .ico.p{background:#0891b2}
     .ico.a{background:#60a5fa}
+
+    /* chevrons animados */
+    .chevrons{display:flex;gap:10px;align-items:center}
+    .chev{width:0;height:0;border-top:10px solid transparent;border-bottom:10px solid transparent;border-left:14px solid #60a5fa;opacity:.35}
+    .chev:nth-child(1){animation:chev 1.2s linear infinite}
+    .chev:nth-child(2){animation:chev 1.2s linear .2s infinite}
+    .chev:nth-child(3){animation:chev 1.2s linear .4s infinite}
+    @keyframes chev{
+      0%{transform:translateX(-6px);opacity:.15}
+      40%{opacity:.55}
+      100%{transform:translateX(6px);opacity:.15}
+    }
 
     /* KPI strip */
     .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:10px;margin:16px 0}
@@ -223,23 +253,31 @@
       </div>
     </div>
 
-    <!-- Pipeline pills (no SVG, más lleno y limpio) -->
+    <!-- Pipeline animado -->
     <div class="hero-visual" aria-label="Flujo simplificado: Datos → Probabilidad → Alertas">
       <div class="pipeline" aria-hidden="true">
-        <div class="pill">
-          <div class="ico d"> </div>
+        <div class="pill step-1">
+          <div class="ico d"></div>
           <b>Datos</b>
           <small>ingesta segura</small>
         </div>
-        <div class="arrow"></div>
-        <div class="pill">
-          <div class="ico p"> </div>
+
+        <div class="chevrons">
+          <span class="chev"></span><span class="chev"></span><span class="chev"></span>
+        </div>
+
+        <div class="pill step-2">
+          <div class="ico p"></div>
           <b>Probabilidad</b>
           <small>calibración</small>
         </div>
-        <div class="arrow"></div>
-        <div class="pill">
-          <div class="ico a"> </div>
+
+        <div class="chevrons">
+          <span class="chev"></span><span class="chev"></span><span class="chev"></span>
+        </div>
+
+        <div class="pill step-3">
+          <div class="ico a"></div>
           <b>Alertas</b>
           <small>bandas/umbrales</small>
         </div>
