--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     @keyframes bg-sweep { to{ transform:translateX(120%)} }
 
     /* Pipeline — quepa SIEMPRE: wrap + reducción responsiva */
-    .pipeline{position:relative;display:flex;gap:18px;align-items:center;justify-content:center;flex-wrap:wrap;max-width:100%}
+    .pipeline{position:relative;display:flex;gap:18px;align-items:center;justify-content:center;flex-wrap:wrap;max-width:100%;margin:0 auto;text-align:center}
     .pill{
       padding:16px 18px;border:1px solid var(--card-border);background:rgba(13,22,44,.85);
       border-radius:16px;min-width:180px;text-align:center;box-shadow:inset 0 0 0 1px rgba(255,255,255,.02);
@@ -208,9 +208,32 @@
     .reveal.left{transform:translateX(-16px)}
     .reveal.right{transform:translateX(16px)}
     .reveal.in.left,.reveal.in.right{transform:none}
-  </style>
+      /* === Fondo animado global (mesh sutil) === */
+    .animated-bg{position:fixed;inset:-10% -10% -10% -10%;z-index:-1;pointer-events:none;filter:blur(40px);opacity:.28;animation:meshMove 20s ease-in-out infinite alternate}
+    @keyframes meshMove{
+      0%{background:radial-gradient(40% 35% at 10% 20%, rgba(56,189,248,.25), transparent 55%),
+                 radial-gradient(35% 40% at 90% 10%, rgba(37,99,235,.25), transparent 60%),
+                 radial-gradient(45% 45% at 50% 85%, rgba(125,211,252,.18), transparent 62%)}
+      100%{background:radial-gradient(40% 35% at 15% 30%, rgba(56,189,248,.25), transparent 55%),
+                   radial-gradient(35% 40% at 85% 15%, rgba(37,99,235,.25), transparent 60%),
+                   radial-gradient(45% 45% at 55% 80%, rgba(125,211,252,.18), transparent 62%)}
+    }
+    @media (prefers-reduced-motion: reduce){ .animated-bg{animation:none} }
+
+    /* === Pipeline centrado perfecto (grid en desktop, stack en mobile) === */
+    @media(min-width:920px){
+      .hero-visual .pipeline{display:grid;grid-template-columns:1fr auto 1fr auto 1fr;align-items:center;justify-items:center;gap:18px;max-width:860px;margin:0 auto}
+      .hero-visual .chevrons{width:72px;justify-content:center}
+    }
+    @media(max-width:919px){
+      .hero-visual .pipeline{display:flex;flex-direction:column;align-items:center;gap:14px}
+      .hero-visual .chevrons{display:none}
+      .hero-visual .pill{width:100%;max-width:420px}
+    }
+</style>
 </head>
 <body>
+  <div class="animated-bg" aria-hidden="true"></div>
   <!-- NAVBAR -->
   <nav class="navbar" role="navigation" aria-label="Navegación principal">
     <div class="wrap nav-inner">
