--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     .navbar{position:sticky;top:0;z-index:50;background:rgba(15,23,42,.85);backdrop-filter:blur(10px);border-bottom:1px solid rgba(255,255,255,.06)}
     .nav-inner{display:flex;align-items:center;justify-content:space-between;gap:16px;padding:10px 0}
     .nav-left{display:flex;align-items:center;gap:10px}
-    .nav-left img{height:34px;width:auto}
+    .nav-left img{height:48px;width:auto}
+    @media (max-width:480px){
+    .nav-left img{height:36px}
+    }
     .nav-links{display:none;gap:14px}
     .nav-cta{display:flex;gap:10px}
     .btn{display:inline-block;padding:10px 14px;border-radius:12px;font-weight:650;text-decoration:none;border:1px solid transparent;line-height:1;transition:transform .2s ease, filter .2s ease}
